--- a/.gitignore
+++ b/.gitignore
@@ -16,30 +16,56 @@ parts/
 sdist/
 var/
 wheels/
+pip-wheel-metadata/
+share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+PIPFILE.lock
 
 # Virtual Environment
 venv/
 env/
 ENV/
+env.bak/
+venv.bak/
 
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
+*~
+.DS_Store
 
-# Data
-data/raw/*.csv
-data/raw/*.json
-data/processed/*.csv
-data/processed/*.json
+# Jupyter Notebook
+.ipynb_checkpoints
+*.ipynb
+
+# Data files (optional - uncomment if you don't want to track data)
+# data/
+# *.csv
+# *.json
+# *.parquet
+
+# Analysis results (optional)
+# analysis_results/
+# *.png
+# *.jpg
+
+# Logs
 *.log
 
-# Environment
+# Environment variables
 .env
+.env.local
 
-# Jupyter
-.ipynb_checkpoints/
+# OS
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Temporary files
+*.tmp
+*.bak
+*.swp
